# super-vibing

./: .gitignore  AGENTS.md  package.json  playwright.config.ts  playwright.visual.config.ts  pnpm-lock.yaml
.github/workflows/: ci.yml  release.yml
apps/desktop/: index.html  package.json  tailwind.config.ts  vite.config.ts  vitest.config.ts
apps/desktop/src/: App.selectors.test.ts  App.settings-updater.test.tsx  App.shortcuts.test.ts  App.terminal-persistence.test.tsx  App.tsx  main.tsx  styles.css  styles.soft-ui.test.ts  types.ts
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/capabilities/: default.json
apps/desktop/src-tauri/src/: lib.rs
apps/desktop/src/components/: AppSidebar.test.tsx  AppSidebar.tsx  CommandPalette.test.tsx  CommandPalette.tsx  EmptyStatePage.tsx  GitSection.tsx  KanbanSection.tsx  NewPaneModal.test.tsx  NewPaneModal.tsx  NewWorkspaceModal.test.tsx  NewWorkspaceModal.tsx  PaneGrid.test.tsx  PaneGrid.tsx  SectionMenu.tsx  StartupCrashScreen.tsx  StartupErrorBoundary.test.tsx  StartupErrorBoundary.tsx  TerminalPane.test.tsx  TerminalPane.tsx  TopChrome.tsx  WorktreeManagerSection.tsx
apps/desktop/src/lib/: pane-focus.ts  (+12 more)
apps/desktop/tests/: layout.contract.test.ts  styles.soft-ui.test.ts
docs/: architecture.md  changelog.md  decision-log.md  project-status.md  tech-stack.md
scripts/: create-release-tag.sh  prepare-release-version.sh  verify-release-version.sh
tests/e2e/: helpers.ts  kanban-lifecycle.spec.ts  section-routing.spec.ts
tests/visual/: shell-regression.spec.ts  theme-regression.spec.ts
(+6 files in other folders)
