[package]
name = "appsdesktop"
version = "0.1.0"
description = "SuperVibing desktop orchestrator"
authors = ["SuperVibing"]
edition = "2021"

[lib]
name = "appsdesktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
portable-pty = "0.9"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-store = "2"
tokio = { version = "1", features = ["rt", "sync"] }
uuid = { version = "1", features = ["v4"] }
libc = "0.2"
